Fixing silly layout bug

--- a/themes/sams-theme/assets/css/layout.scss
+++ b/themes/sams-theme/assets/css/layout.scss
@@ -192,7 +192,7 @@ body {
     @apply mx-auto my-12 max-w-4xl;
 
     &.review-card {
-      @apply my-0 ml-0;
+      @apply my-0;
     }
 
     &.img-full {
